# hashcash

./: Cargo.toml
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
contracts/src/: HashCash.sol
contracts/test/: HashCash.t.sol
src/: lib.rs  main.rs
src/tests/: hash_tests.rs
