[package]
name = "hashcash_example"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = "0.10.6"
hex = { version = "0.4", features = ["std"] }
digest = "0.9.0"
sha256 = "1.5.0"
poseidon-rs = "0.0.10"
ff = "0.13.0"
ff_ce = "0.14.3"
ark-bn254 = "0.5.0"
spawn-zk-snarks = "0.1.5"
light-poseidon = "0.3.0"
ark-ff = "0.5.0"
primitive-types = "0.13.1"
